Website: Added custom images. Changed Procfile to avoid SIGTERM bug with npm scripts on heroku

--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -11,7 +11,7 @@
             <div class="card potion-card">
                 <h3 class="delete-alert alert alert-success card-title" style="display: none;">
                 </h3>
-                <h3 class="card-title">Potions ⚗️
+                <h3 class="card-title">Potions <img src="/assets/images/potion.png" class="title-image" alt="potion">
                 </h3>
                 <div class="card-content">
                     {{#each potions}}
@@ -26,7 +26,7 @@
                 {{> add-btn}}
             </div>
             <div class="card weapon-card">
-                <h3 class="card-title">Weapons ⚔️</h3>
+                <h3 class="card-title">Weapons <img src="/assets/images/knife.png" alt="knife" class="title-image"></h3>
                 <div class="card-content">
                     {{#each weapons}}
                     <div class="row weapon-row" data-name="{{name}}" data-quantity="{{quantity}}">
