--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -99,10 +99,18 @@ header {
 	width: 100%;
 	opacity: 0.7;
 }
+
+.title-image {
+	height: 3rem;
+}
+
 .card .card-title {
 	color: indigo;
 	margin: 0.5rem;
 	font-size: 2.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .card,
