--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bellota+Text|Open+Sans:300&display=swap" rel="stylesheet">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script defer src="/assets/moment.js" type="text/javascript"></script>
+    <script defer src="/assets/js/moment.js" type="text/javascript"></script>
     <script defer src="/assets/js/index.js" type="text/javascript"></script>
     <script defer src="/assets/js/modal.js" type="text/javascript"></script>
     <script defer src="/assets/js/money.js"></script>
