--- a/views/all-characters.handlebars
+++ b/views/all-characters.handlebars
@@ -5,23 +5,17 @@
         <h1>All Characters</h1>
     </header>
     <div class="row">
-        <div class="col l8" style="margin-left: auto; margin-right: auto">
-            <div class="card">
-                <div class="card-body">
-                    <ul class="list-group">
-                        {{#each characters}}
-                        <form action="/change-default-char" method="POST">
-                            <input name="characterId" hidden value="{{_id}}">
-                            <li class="list-group-item">{{name}}
-                                <a href="/inventory/{{_id}}" class="btn">Inventory</a>
-                                <button type="submit" class="btn btn-info">Make default</button>
-                            </li>
-                        </form>
-                        {{/each}}
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <ul class="col l8 collection character-collection">
+            {{#each characters}}
+            <li class="collection-item">{{name}}
+                <form action="/change-default-char" method="POST">
+                    <input name="characterId" hidden value="{{_id}}">
+                    <a href="/inventory/{{_id}}" class="btn">Inventory</a>
+                    <button type="submit" class="btn btn-info">Make default</button>
+                </form>
+            </li>
+            {{/each}}
+        </ul>
     </div>
     {{#if successMsg}}
     <h2 class="alert alert-success">{{successMsg}}</h2>
