--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -1,7 +1,8 @@
 {{> navbar}}
 <main class="container wrapper">
-    <h1 class="title" style="display: inline-flex;"> <img style="height: 5rem;" src="/assets/images/primary-logo-sm.png"
-            alt=""> Guide</h1>
+    <h1 class="title" style="display: inline-flex;"> <img style="height: 5rem;" src="/assets/images/book.png"
+            alt="book">
+        Guide</h1>
     <article>
         <p>A simple Discord Bot that manages inventory for D&amp;D campaigns.</p>
         <p>Commands are <em>not</em> case sensitive, neither are inventory items. However, they will still appear
