--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,15 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bellota+Text|Open+Sans:300&display=swap" rel="stylesheet">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script defer src="/assets/js/moment.js" type="text/javascript"></script>
-    <script defer src="/assets/js/index.js" type="text/javascript"></script>
-    <script defer src="/assets/js/modal.js" type="text/javascript"></script>
-    <script defer src="/assets/js/money.js"></script>
-    <script defer src="/assets/js/register.js"></script>
-    <script defer src="/assets/js/login.js"></script>
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/override.css">
+    <link rel="manifest" href="/dist/manifest.json">
+    <script defer src="/dist/bundle.js"></script>
     <title>DnD Inventory</title>
 </head>
 
