--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,44 +3,40 @@
     <header>
         <h1>Register</h1>
     </header>
-    <div class="row justify-content-center">
-        <div class="col l8">
-            <form>
-                <div class="row">
-                    <h5>Info from Discord Bot</h5>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <input type="text" class="form-control characterName" name="characterName"
-                            placeholder="Discord character name">
-                    </div>
-                    <div class="col">
-                        <input type="text" class="form-control token" name="token" placeholder="Token">
-                    </div>
-                </div>
-                <div class="row">
-                    <h5>Your Details</h5>
-                </div>
+    <div class="row form-wrapper" style="display: flex; justify-content: center;">
+        <form action="/api/register" method="POST" style="margin-right: auto; margin-left: auto;">
+            <div class="row">
+                <h5>Info from Discord Bot</h5>
+            </div>
+            <div class="input-field">
+                <input type="text" class="validate characterName" name="characterName"
+                    placeholder="Discord character name">
+            </div>
+            <div class="input-field">
+                <input type="text" class="validate token" name="token" placeholder="Token">
+            </div>
+            <div class="row">
+                <h5>Your Details</h5>
+            </div>
 
-                <div class="form-group">
-                    <input type="email" class="form-control email" name="email" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control username" name="username" placeholder="Enter username">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control password" name="password" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control password2" name="password2"
-                        placeholder="Confirm password">
-                </div>
-                {{#if errorMsg}}
-                <div class="row alert alert-warning">{{errorMsg}}</div>
-                {{/if}}
-                <button type="submit" class="row btn btn-primary register-user">Submit</button>
-            </form>
-        </div>
+            <div class="input-field">
+                <input type="email" class="validate email" name="email" placeholder="Enter email">
+            </div>
+            <div class="input-field">
+                <input type="text" class="validate username" name="username" placeholder="Enter username">
+            </div>
+            <div class="input-field">
+                <input type="password" class="validate password" name="password" placeholder="Password">
+            </div>
+            <div class="input-field">
+                <input type="password" class="validate password2" name="password2" placeholder="Confirm password">
+            </div>
+            {{#if errorMsg}}
+            <div class="row alert alert-warning">{{errorMsg}}</div>
+            {{/if}}
+            <button type="submit" class="row btn btn-primary register-user">Submit<i
+                    class="material-icons right">send</i></button>
+        </form>
     </div>
-    <a href="/login">Click here to create new account.</a>
+    <a href="/login">Have an account? Login here.</a>
 </main>
