Adapted project to webpack.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Bellota+Text|Open+Sans:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/override.css">
-    <link rel="manifest" href="/dist/manifest.json">
-    <script defer src="/dist/bundle.js"></script>
+    <link rel="manifest" href="/dist/manifest.webmanifest">
+    <script defer src="/dist/app-bundle.js"></script>
     <title>DnD Inventory</title>
 </head>
 
