--- a/views/partials/add-btn.handlebars
+++ b/views/partials/add-btn.handlebars
@@ -1,1 +1,3 @@
-<button style="width: 100%;" class="btn teal add-btn">Add more...</button>
+<button style="width: 100%; height: auto; padding: 0.25rem; transition: 400ms;"
+    class="btn light-blue darken-4 add-btn">Add
+    more...</button>
