--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -194,7 +194,7 @@ card-content {
 	color: white !important;
 	box-shadow: inset 0 0 2rem 0.05rem var(--dark) !important;
 }
-
+aside ul,
 .potion-card > .card-content,
 .weapon-card > .card-content,
 .misc-card > .card-content {
@@ -207,6 +207,7 @@ card-content {
 	scroll-padding: 0;
 	scroll-margin-block: initial;
 }
+aside ul::-webkit-scrollbar,
 .potion-card > .card-content::-webkit-scrollbar,
 .weapon-card > .card-content::-webkit-scrollbar,
 .misc-card > .card-content::-webkit-scrollbar {
@@ -214,6 +215,7 @@ card-content {
 	height: auto;
 	background-color: #aaa; /* or add it to the track */
 }
+aside ul::-webkit-scrollbar-thumb,
 .potion-card > .card-content::-webkit-scrollbar-thumb,
 .weapon-card > .card-content::-webkit-scrollbar-thumb,
 .misc-card > .card-content::-webkit-scrollbar-thumb {
