--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -340,11 +340,22 @@ footer a:hover {
 	color: var(--primary);
 }
 
+@media screen and (min-width: 997px) {
+	#mobile-nav {
+		display: none;
+	}
+}
+
 @media screen and (max-width: 997px) {
 	:root {
 		font-size: 16px;
 	}
+	#desktop-nav {
+		display: none;
+	}
+
 	.wrapper {
+		width: 100%;
 		padding: 1rem 0.5rem;
 	}
 	.jumbotron {
@@ -371,5 +382,8 @@ footer a:hover {
 	}
 	.card-grid {
 		grid-template-columns: 1fr;
+	}
+	footer {
+		font-size: 12px;
 	}
 }
