--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -16,7 +16,7 @@
     </li>
     {{/if}}
 </ul>
-<nav>
+<nav id="desktop-nav">
     <div class="nav-wrapper">
         <div class="brand-logo">
             <a href="/" style="display: inline-grid; align-content: center;">
@@ -40,6 +40,47 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Guide</a>
             </li>
+        </ul>
+    </div>
+</nav>
+
+<ul id="slide-out" class="sidenav">
+    <li class="nav-item">
+        <a class="nav-link" href="/">Guide</a>
+    </li>
+    <li class="nav-item">
+        {{#if userStatus.loggedIn}}
+        <a class="nav-link" href="/logout">Logout</a>
+        {{/if}}
+        {{#if userStatus.loggedOut}}
+        <a class="nav-link" href="/login">Login</a>
+        {{/if}}
+    </li>
+    {{#if userStatus.loggedIn}}
+    <li class="nav-item">
+        <a class="nav-link" href="/inventory">Inventory</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/add-character">Add character</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/all-characters">See all characters</a>
+    </li>
+    {{/if}}
+</ul>
+<nav id="mobile-nav">
+    <div class="nav-wrapper">
+        <div class="brand-logo left" style="height: 100%;">
+            <a href="/inventory" style="display: inline-grid; align-content: center;">
+                <img src="/assets/images/primary-logo-sm.png" alt="DnD Inventory Logo"
+                    style="width: 2rem; border-radius: 50%; margin-right: 0.5rem">
+            </a>
+        </div>
+        <ul class="right">
+            <li>
+                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </li>
+
         </ul>
     </div>
 </nav>
