--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Manage your D&D character details with this app.">
     <script defer src="https://kit.fontawesome.com/d50f4ca58c.js" crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/override.css">
     <link rel="manifest" href="/dist/manifest.webmanifest">
     <script defer src="/dist/app-bundle.js"></script>
-    <title>DnD Inventory</title>
+    <title>IntelliDnD</title>
 </head>
 
 <body>
