--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -22,7 +22,7 @@
             <a href="/" style="display: inline-grid; align-content: center;">
                 <img src="/assets/images/primary-logo-sm.png" alt="DnD Inventory Logo"
                     style="width: 2rem; border-radius: 50%; margin-right: 0.5rem">
-            </a> D&D Inventory Bot for
+            </a> IntelliDnD
             <a target="_blank" href="https://discord.com/app" style="margin-left: 0.5rem; color:#7289DA;">
                 <i class="fab fa-discord" style="font-size: 2rem;"></i>
             </a>
