--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,6 +17,7 @@
 
 body {
 	background-image: url("/assets/images/primary-logo-sm.png");
+	background-size: auto;
 	color: whitesmoke;
 	font-family: "Open Sans", sans-serif;
 	background-color: var(--accent);
@@ -57,7 +58,6 @@ h1 {
 
 .wrapper {
 	max-width: 100vw;
-	width: 80vw;
 	margin-top: 2rem;
 	text-align: center;
 	padding: 2rem;
@@ -66,6 +66,10 @@ h1 {
 	box-shadow: 0 0 1rem 0.2rem var(--darkgray);
 	margin-bottom: 2rem;
 }
+.inventory {
+	width: 80vw;
+}
+
 .form-wrapper {
 	display: flex;
 	justify-content: center;
@@ -109,6 +113,7 @@ header {
 
 .card {
 	/* font-size: 1.5rem; */
+	height: max-content;
 	margin: unset;
 	border: unset;
 }
@@ -130,16 +135,18 @@ header {
 
 .card .card-title {
 	color: indigo;
-	margin: 0.5rem;
+	padding: 0.5rem;
+	margin: 0;
 	font-size: 2.5rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-color: var(--third);
 }
 
 .card,
 card-content {
-	background-color: var(--third);
+	background: transparent;
 }
 .card-content {
 	max-height: 25rem;
@@ -169,7 +176,6 @@ card-content {
 	color: white !important;
 	/* custom */
 	background: var(--secondary);
-	border: 1px solid white;
 	padding: 0.25rem;
 	display: flex;
 	align-items: center;
@@ -239,9 +245,7 @@ form .row {
 .row {
 	margin-bottom: 0.5rem;
 }
-.card .row:last-of-type {
-	margin-bottom: unset;
-}
+
 .add-btn {
 	border-radius: 0 0 0.25rem 0.25rem;
 	border: 2px solid var(--third);
@@ -266,9 +270,6 @@ input::placeholder {
 	border-radius: 0.25rem 0 0 0.25rem !important;
 }
 
-.btn-primary {
-	background-color: var(--primary);
-}
 .invalid {
 	border: 1px solid red;
 }
@@ -340,15 +341,50 @@ footer a:hover {
 	color: var(--primary);
 }
 
-@media screen and (min-width: 997px) {
+.submit,
+.reset {
+	margin: 0 auto;
+}
+
+.alert {
+	border-style: solid;
+	border-width: 2px;
+	border-radius: 5px;
+	padding: 0.5rem;
+	width: max-content;
+	max-width: 100%;
+	margin: 1rem auto;
+}
+
+.alert-success {
+	background: #009717c9;
+	border-color: #0c5e0c;
+}
+
+.alert-danger {
+	background: #ff5b5bcc;
+	border-color: #6c1616;
+}
+
+@media screen and (max-width: 1147px) {
+	.grid {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media screen and (min-width: 993px) {
 	#mobile-nav {
 		display: none;
 	}
 }
 
-@media screen and (max-width: 997px) {
+@media screen and (max-width: 993px) {
 	:root {
 		font-size: 16px;
+	}
+	body {
+		background-repeat: repeat-y;
+		background-size: contain;
 	}
 	#desktop-nav {
 		display: none;
@@ -357,10 +393,6 @@ footer a:hover {
 	.wrapper {
 		width: 100%;
 		padding: 1rem 0.5rem;
-	}
-	.jumbotron {
-		margin-bottom: 1rem;
-		padding: 0.5rem;
 	}
 	.col .s4,
 	.col .s8,
@@ -371,19 +403,20 @@ footer a:hover {
 	.card .row:last-of-type {
 		margin-bottom: unset;
 	}
-	.player-name-display {
+	header {
 		margin: -1rem -0.5rem 1rem -0.5rem;
 	}
 	.col .s8 {
 		margin-bottom: unset;
 	}
-	.grid {
-		grid-template-columns: 1fr;
-	}
+
 	.card-grid {
 		grid-template-columns: 1fr;
 	}
 	footer {
 		font-size: 12px;
+	}
+	.form-wrapper form {
+		width: 100%;
 	}
 }
