--- a/views/all-characters.handlebars
+++ b/views/all-characters.handlebars
@@ -4,23 +4,26 @@
     <header>
         <h1>All Characters</h1>
     </header>
-    <div class="row">
-        <ul class="col l8 collection character-collection">
-            {{#each characters}}
-            <li class="collection-item">{{name}}
-                <form action="/change-default-char" method="POST">
-                    <input name="characterId" hidden value="{{_id}}">
-                    <a href="/inventory/{{_id}}" class="btn">Inventory</a>
-                    <button type="submit" class="btn btn-info">Make default</button>
-                </form>
-            </li>
-            {{/each}}
-        </ul>
-    </div>
     {{#if successMsg}}
     <h2 class="alert alert-success">{{successMsg}}</h2>
     {{/if}}
     {{#if errorMsg}}
     <h2 class="alert alert-danger">{{errorMsg}}</h2>
     {{/if}}
+    <div class="row" style="display: flex; justify-content: center;">
+        <ul class="col l8 collection character-collection">
+            {{#each characters}}
+            <li class="collection-item">
+                <h3><code>{{name}}</code></h3>
+                <form action="/change-default-char" method="POST">
+                    <input name="characterId" hidden value="{{_id}}">
+                    <a href="/inventory/{{_id}}" class="btn btn waves-effect orange darken-4">Inventory <i
+                            class="material-icons right">book</i></a>
+                    <button type="submit" class="btn btn waves-effect purple lighten-1">Make default <i
+                            class="material-icons right">check</i></button>
+                </form>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
 </main>
