--- a/views/partials/input-nondynamic.handlebars
+++ b/views/partials/input-nondynamic.handlebars
@@ -1,8 +1,7 @@
 <div class="col s8">
     <div class="input-field">
-        <label class="prefixed-label name-label">Name</label>
         <button class="btn red lighten-1 del-btn" style="display: none;">Delete</button>
-        <input type="text" maxlength="90" class="name" placeholder="New..." value="">
+        <input aria-label="name" type="text" maxlength="90" class="name" placeholder="New..." value="">
     </div>
 </div>
 <div class="col s4">
