Changed button to 'copy invite link'

--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -6,10 +6,10 @@
     </header>
     <article>
         <h4>Welcome to <b>IntelliDnD</b>, an application that helps you manage your D&D character, accompanied by a <a
-                href="https://discordapp.com/api/oauth2/authorize?client_id=692109220371365989&permissions=134309888&scope=bot.">Discord
+                href="https://discordapp.com/api/oauth2/authorize?client_id=692109220371365989&permissions=134309888&scope=bot">Discord
                 bot.</a>
             <button id="get-invite-link" style="color: black;"
-                class="btn purple lighten-5 waves-effect waves-orange">Copy link</button>
+                class="btn purple lighten-5 waves-effect waves-orange">Copy invite link</button>
         </h4>
         <hr>
         <h3 id="bot-commands">Bot Commands</h3>
