--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -78,8 +78,8 @@
                             <label for="electrum" class="prefixed-label">Electrum</label>
                             <input type="number" class="electrum preloaded" placeholder="0" value="{{electrum}}">
                         </div>
-                        <p class="money-total"></p>
                     </div>
+                    <div class="money-total"></div>
                 </div>
             </div>
         </div>
